# Quartz

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: db.rs  main.rs  quote.rs
static/css/: style.css
templates/: index.html.hbs  quote.html.hbs
templates/error/: 404.html.hbs
