[package]
name = "quartz"
version = "0.1.2"
authors = ["MoonlightOwl <murky.owl@gmail.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.1", features = ["sqlite", "r2d2"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]
